--- a/src/PartsUnlimitedWebsite/Web.config
+++ b/src/PartsUnlimitedWebsite/Web.config
@@ -20,7 +20,7 @@
     <add key="MachineLearning.AccountKey" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnectionString" connectionString="Server=(local)\SQLExpress;Database=PartsUnlimitedWebsite;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnectionString" connectionString="Server=(localdb)\MSSQLLocalDB;Database=PartsUnlimitedWebsite;Trusted_Connection=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <customErrors mode="Off" />
