--- a/src/PartsUnlimitedWebsite/Web.Release.config
+++ b/src/PartsUnlimitedWebsite/Web.Release.config
@@ -26,6 +26,7 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-    <customErrors mode="RemoteOnly" xdt:Transform="Replace" />
+    <!--<customErrors mode="RemoteOnly" xdt:Transform="Replace" />-->
+    <customErrors mode="Off" />
   </system.web>
 </configuration>
