--- a/src/PartsUnlimitedWebsite/appsettings.json
+++ b/src/PartsUnlimitedWebsite/appsettings.json
@@ -1,4 +1,12 @@
-﻿{
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
   "AdminRole": {
     "UserName": "Administrator@test.com",
     "Password": "YouShouldChangeThisPassword1!"
@@ -36,6 +44,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": ""
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PartsUnlimitedNet5;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
