--- a/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
+++ b/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
@@ -1,40 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <AssemblyName>PartsUnlimitedWebsite</AssemblyName>
-    <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-PartsUnlimitedWebsite-88B5164A-732F-489C-B25E-AC693ECEB5FB</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>	
-	<PackageReference Include="Microsoft.AspNetCore.All" />	
-	<PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.500-preview2-1-003177" />	
-
- </ItemGroup>
-
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.0-rc.2.20466.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="5.0.0-rc.2.20466.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.0-rc.2.20466.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.0-rc.2.20466.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0-rc.2.20465.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PartsUnlimited.Models\PartsUnlimited.Models.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Content Update="config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Views\**\*;Areas\**\*">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </None>
-  </ItemGroup>
-
-  <Target Name="PrecompileScript" BeforeTargets="BeforeBuild">
+   <Target Name="PrecompileScript" BeforeTargets="BeforeBuild">
     <Exec Command="npm install --python=python2.7" />
     <Exec Command="npm config set python python2.7" />
     <Exec Command="npm install -g grunt-cli" />
