Start adding API

--- a/src/PartsUnlimitedWebsite/appsettings.Development.json
+++ b/src/PartsUnlimitedWebsite/appsettings.Development.json
@@ -8,5 +8,11 @@
     "SignUpSignInPolicyId": "B2C_1_susi",
     "ResetPasswordPolicyId": "B2C_1_reset",
     "EditProfilePolicyId": "B2C_1_edit_profile"
+  },
+  "AzureAdB2CAPI": {
+    "Instance": "https://PartsUnlimitedNetConf2020.b2clogin.com/tfp/",
+    "ClientId": "770baddd-a0b0-4b8f-b9bb-681500425d2f",
+    "Domain": "PartsUnlimitedNetConf2020.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_susi"
   }
 }
