--- a/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
+++ b/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\API\ShoppingCartController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Controllers\API\NewFile.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.0" />
@@ -21,14 +29,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PartsUnlimited.Shared\PartsUnlimited.Shared.csproj" />
     <ProjectReference Include="..\PartsUnlimited.Models\PartsUnlimited.Models.csproj" />
   </ItemGroup>
 
-   <Target Name="PrecompileScript" BeforeTargets="BeforeBuild">
-    <Exec Command="npm install --python=python2.7" />
+   <!--<Target Name="PrecompileScript" BeforeTargets="BeforeBuild">
+    <Exec Command="npm install &#45;-python=python2.7" />
     <Exec Command="npm config set python python2.7" />
     <Exec Command="npm install -g grunt-cli" />
     <Exec Command="grunt" />
-  </Target>
+  </Target>-->
 
 </Project>
